// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas al componente <GifExpertApp/> debe mostrarse correctamente <GifExpertApp 1`] = `
<Fragment>
  <h2>
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`pruebas al componente <GifExpertApp/> debe mostrarse correctamente <GifExpertApp con categorias 1`] = `
<Fragment>
  <h2>
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Samurai X"
      key="Samurai X"
    />
  </ol>
</Fragment>
`;
